Add 1.3 Video Test

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-cayman
 title: آمار و احتمال
 description: آموزشی آنلاین و رایگان بر آمار و احتمال
 show_downloads: false
