--- a/config.json
+++ b/config.json
@@ -7,19 +7,19 @@
     {
       "title": "جلسه اول",
       "streamLink": "https://www.aparat.com/video/video/embed/videohash/jkMhT/vt/frame",
-      "file": "/lectures/Lecture1.html",
+      "file": "lectures/Lecture1.html",
       "description": "جلسه اول درباره مقدمات آمار و احتمال است."
     },
     {
       "title": "جلسه دوم",
       "streamLink": "https://www.aparat.com/video/video/embed/videohash/5aSiJ/vt/frame",
-      "file": "/lectures/Lecture2.html",
+      "file": "lectures/Lecture2.html",
       "description": "جلسه دوم درباره  آمار و احتمال است."
     },
     {
       "title": "جلسه سوم",
       "streamLink": "https://www.aparat.com/video/video/embed/videohash/VzL1x/vt/frame",
-      "file": "/lectures/Lecture3.html",
+      "file": "lectures/Lecture3.html",
       "description": "جلسه سوم درباره  آمار و احتمال است."
     }
   ]
