--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
     {
       "title": "جلسه اول",
       "streamLink": "https://www.aparat.com/video/video/embed/videohash/jkMhT/vt/frame",
-      "file": "/lectures/Lecture1.html",
+      "file": "/Lecture1.html",
       "description": "جلسه اول درباره مقدمات آمار و احتمال است."
     },
     {
